# iron-onefile

./: Cargo.toml
src/: main.rs
